<resources>
    <string name="app_name">Clases Particulares</string>
    <string name="info">Te debe %1$.2f€ de %2$.1f clases.</string>
    <string name="price">Precio: </string>
    <string name="eur">€</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_email">e-mail</string>
    <string name="phone">Teléfono: </string>
    <string name="prompt_address">Dirección</string>
    <string name="prompt_comments">Comentarios</string>
    <string name="save">Guardar</string>
    <string name="delete">Borrar</string>
    <string name="view_price">Precio: %1$.2f€</string>
    <string name="view_phone">Teléfono: %1$d</string>
    <string name="edit">Editar</string>
    <string name="add_class">Añadir clase</string>
    <string name="duration">Duración: </string>
    <string name="paid">¿Pagada?</string>
    <string name="discard">Descartar</string>
    <string name="one">1</string>
    <string name="cl_info">Duración: %1$.1f.</string>
    <string name="date">01/01/1970</string>
    <string name="view_classes">Clases</string>
    <string name="paid_classes">¿Mostrar las clases pagadas?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="add_student">Añadir alumno</string>
    <string name="empty_classes">Aún no tienes ninguna clase guardada&#8230;</string>
    <string name="empty_students">¡Añade nuevos alumnos pulsando el botón de abajo!</string>
    <string name="homework_name">Nuevos deberes</string>
    <string name="homework_student_name">Deberes de %s</string>
    <string name="view_homework">Deberes</string>
    <string name="made">¿Completados?</string>
    <string name="homework_name_prompt">Deberes</string>
</resources>
